[tool.poetry]
name = "pistachio gaming valorant map"
version = "6.0.0"
description = "Stay focus"
authors = ["quojama <giantkoyama@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
